petname (1.8) unreleased; urgency=medium

  * usr/bin/petname:
    - add a -h|--help option that drops you in the manpage

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 13 Jan 2015 11:30:54 -0600

petname (1.7-0ubuntu1) vivid; urgency=medium

  * usr/bin/petname, usr/share/petname/petname.sh:
    - drop the "Rand" prefix, as it's implicit

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 13 Jan 2015 11:30:51 -0600

petname (1.6-0ubuntu1) vivid; urgency=medium

  * debian/rules, usr/share/petname/names.txt:
    - ensure our LC_ALL=C so that our grep works
    - prune out a name with a funny character caught by our grep

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 12 Jan 2015 09:36:43 -0600

petname (1.5-0ubuntu1) vivid; urgency=medium

  * usr/bin/petname:
    - ensure that the binary can run from local source checkout
  * === added directory usr/share/petname, debian/rules, === removed
    directory usr/lib, === removed directory usr/lib/petname,
    usr/bin/petname, usr/lib/petname/adjectives.txt =>
    usr/share/petname/adjectives.txt, usr/lib/petname/adverbs.txt =>
    usr/share/petname/adverbs.txt, usr/lib/petname/names.txt =>
    usr/share/petname/names.txt, usr/lib/petname/petname.sh =>
    usr/share/petname/petname.sh:
    - this is architecture independent, so move lib -> share
  * usr/share/petname/petname.sh:
    - add interpreter to silence lintian

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 12 Jan 2015 09:17:36 -0600

petname (1.4-0ubuntu1) vivid; urgency=medium

  * usr/lib/petname/names.txt:
    - remove some religious figures

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 16 Dec 2014 14:28:29 -0600

petname (1.3-0ubuntu1) vivid; urgency=medium

  * README.md:
    - update docs to point to pypi and pip install instructions
    - add apt-get install instructions

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 16 Dec 2014 14:05:41 -0600

petname (1.2-0ubuntu1) vivid; urgency=medium

  * usr/bin/petname, usr/lib/petname/petname.sh: