@@ -7,8 +7,9 @@ petname \- utility to generate "pet names", consisting of a random combination o
 
 .SH OPTIONS
 
-    --words            number of words in the name, default is 2
-    --separator        string used to separate name words, default is '-'
+    -w|--words            number of words in the name, default is 2
+    -s|--separator        string used to separate name words, default is '-'
+    -d|--dir              directory containing adverbs.txt, adjectives.txt, names.txt, default is \fI/usr/share/petname/\fP
 
 .SH DESCRIPTION
 
